[tracing] Fix mising thread names in heap profiler

The thread name goes missing in cases where the heap profiling is
enabled after SetThreadName is called. To fix this, the tracker now
tries to get the thread name from prctl sys call. Both Linux and Android
sets the thread name using prctl. The string allocated for thread name
in tracker needs to be guarded for rentracncy.
This CL also makes thread name as default first entry in the pseudo
stack with thread id if unable to get thread name.
Removes thread name unittest since other unittests cover these cases.

BUG=609912

Review-Url: https://codereview.chromium.org/1958703002
Cr-Commit-Position: refs/heads/master@{#394416}